--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://andrewdalba.github.io/react-portfolio",
+  "homepage": "https://andrewdalba.github.io/react-portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
